tests/NormalTests/paczka1/small_fuzzy/15587709.err
Error in line 2: FIfaJ S907 32,8
Error in line 3: FIfaJ A946 93,4
